--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
     <nav>
         <a href="/index">Home</a>
         <a href="/sobre">Sobre</a>
-        <a href="/contatos">Contatos</a>
+        <a href="/login">Login</a>
         <a href="/login">Postagens</a>
     </nav>
 
