--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -38,7 +38,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #cbd3df;
+            background-color: #a6c6f0;
         }
 
         footer {
@@ -86,7 +86,7 @@
     </header>
 
     <nav>
-        <a href="/index">Home</a>
+        <a href="/">Home</a>
         <a href="/sobre">Sobre</a>
         <a href="/login">Login</a>
         <a href="/login">Postagens</a>
@@ -94,11 +94,14 @@
     </nav>
 
     <section>
-        <!-- Conteúdo da página vai aqui -->
-        <h2>Bem-vindo ao Meu Blog!</h2>
-        <p><br>Este é um blog incrível para amantes de músicas como a mim, estás entediado?</br></p> 
-         <br> Venha conhecer letras populares e vintages de cantores renomados e amados por nós!.</br>
-         <img class="imagem" img src="instrumentos-musicais-em-ingles.jpg">
+        
+        <h2>Bem-vindo ao Meu Blog caro leitor!</h2>
+        <p><br>Como amante da música e lguém que recentemente desenvolveu uma profunda apreciação e interesse pelo mundo da musica</br>
+            <br> Essa pessoa pode estar explorando diferentes gêneros, artistas e estilos, buscando ampliar seu conhecimento musical. </br>
+           <br> Geralmente entusiasmado, em meu blog poderá descobrir constantes faixas, álbuns e experiências sonoras </br>
+           <br>Contribuindo para uma jornada de crescimento e diversificação de seu gosto musical. </br>
+           <br>Essa fase inicial muitas vezes é marcada por uma paixão crescente, curiosidade e uma conexão emocional com a música.</br></p> 
+      
     </section>
 
     <footer>
